--- a/public/registrosucesso.html
+++ b/public/registrosucesso.html
@@ -2,13 +2,9 @@
 <html>
 <head lang="pt-BR">
     <meta charset="UTF-8">
-    <title>Choveu Aqui | Registros de Chuvas no Brasil</title>
+    <title>Registrar Chuva | Choveu Aqui | Registros de Chuvas no Brasil</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="css/navbar-fixed-top.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/estilo.css">
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #2e6da4;">
@@ -33,17 +29,12 @@
         </div>
     </div>
 </nav>
-<div id="corpo" align="center">
-    <div align="center" id="mapa" style="height: 800px; width: 80%; border: 1px solid">
-
-    </div>
+<div>
+    <br/><br/><br/><br/><br/><br/>
+    <h2 align="center">OBRIGADO PELO REGISTRO!</h2>
+    <h4 align="center">Os dados já estão disponíveis para consulta de outros usuários.</h4>
+    <br/><br/><br/><br/><br/><br/>
 </div>
-<script src="js/jquery-1.12.1.min.js"></script>
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-<script src="js/infobox.js"></script>
-<script src="js/markerclusterer.js"></script>
-<script src="js/mapa.js"></script>
-
 <footer class="modal-footer" >
     <h4 align="center">2016 - Feito por Nicolas Fontes |
         <a href="http://www.nicolasfontes.com.br" target="_blank">Portfólio</a> |
@@ -51,7 +42,5 @@
         <a href="https://www.linkedin.com/in/nicolasfontes" target="_blank">LinkedIn</a>
     </h4>
 </footer>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
